add integration tests + config ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,17 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
 
+    services:
+      mongo:
+        image: mongo:6
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd="mongosh --eval 'db.adminCommand(\"ping\")'" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=5
+
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
@@ -32,3 +43,5 @@ jobs:
 
       - name: Rodar Testes Jest
         run: npm test
+        env:
+          MONGODB_URI: mongodb://localhost:27017/testdb
