--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  # Testes unitários que não precisam de MongoDB
   general-tests:
     name: Testes Gerais (sem Mongo)
     runs-on: ${{ matrix.os }}
@@ -31,13 +30,25 @@ jobs:
       - name: Rodar Testes sem integração
         run: npm test -- --testPathIgnorePatterns=app/__tests__/integration/split.test.ts
 
-  # Testes de integração com MongoDB em todos os SOs (instala manualmente o Mongo)
   integration-tests:
     name: Testes de Integração com MongoDB
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
+
+    # Só no Linux usa container
+    services:
+      mongo:
+        if: matrix.os == 'ubuntu-latest'
+        image: mongo:6
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd="mongosh --eval 'db.adminCommand(\"ping\")'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - name: Checkout do código
@@ -52,17 +63,7 @@ jobs:
       - name: Instalar Dependências
         run: npm ci
 
-      - name: Instalar MongoDB no Linux
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y gnupg curl
-          curl -fsSL https://pgp.mongodb.com/server-6.0.asc | sudo gpg -o /usr/share/keyrings/mongodb-server-6.0.gpg --dearmor
-          echo "deb [ signed-by=/usr/share/keyrings/mongodb-server-6.0.gpg ] https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/6.0 multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-6.0.list
-          sudo apt-get update
-          sudo apt-get install -y mongodb-org
-          sudo systemctl start mongod
-
+      # Instala manualmente o MongoDB apenas no Windows e macOS
       - name: Instalar MongoDB no macOS
         if: runner.os == 'macOS'
         run: |
